[tool.poetry]
name = "ddbtools"
version = "0.1.14"
description = ""
authors = ["XUANQI 幻14 <xuan.q@foxmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dolphindb = "^3.0.1.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
