[project]
name = "ddbtools"
version = "0.1.14"
description = ""
authors = [{ name = "XUANQI 幻14", email = "xuan.q@foxmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "dolphindb>=3.0.1.0,<4",
]

[project.optional-dependencies]
log = ["loguru>=0.7.2,<0.8"]

[dependency-groups]
dev = [
    "black>=24.4.2,<25",
    "pytest>=9.0.1",
]


[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
